--- a/tps/tp2/Notebook_TP2.ipynb
+++ b/tps/tp2/Notebook_TP2.ipynb
@@ -892,6 +892,381 @@
     "for loc, freq in sorted_locations[:50]:\n",
     "    print(f\"{loc} apparait {freq} fois\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analyse de Sentiments sur 10 Phrases qui Viennent de l'Année 1941"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Avec Textblob_Fr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Imports\n",
+    "from textblob import Blobber\n",
+    "from textblob_fr import PatternTagger, PatternAnalyzer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "[E088] Text of length 4684433 exceeds maximum of 1000000. The parser and NER models require roughly 1GB of temporary memory per 100,000 characters in the input. This means long texts may cause memory allocation errors. If you're not using the parser or NER, it's probably safe to increase the `nlp.max_length` limit. The limit is in number of characters, so you can check whether your inputs are too long by checking `len(text)`.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[76], line 22\u001b[0m\n\u001b[0;32m     19\u001b[0m         text \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m file\u001b[38;5;241m.\u001b[39mread() \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m\"\u001b[39m  \u001b[38;5;66;03m# Ajouter un espace entre chaque fichier pour éviter de coller les textes\u001b[39;00m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;66;03m# Traiter le texte avec spaCy pour diviser en phrases\u001b[39;00m\n\u001b[1;32m---> 22\u001b[0m doc \u001b[38;5;241m=\u001b[39m \u001b[43mnlp\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     23\u001b[0m sentences \u001b[38;5;241m=\u001b[39m [sent\u001b[38;5;241m.\u001b[39mtext\u001b[38;5;241m.\u001b[39mstrip() \u001b[38;5;28;01mfor\u001b[39;00m sent \u001b[38;5;129;01min\u001b[39;00m doc\u001b[38;5;241m.\u001b[39msents]\n\u001b[0;32m     25\u001b[0m \u001b[38;5;66;03m# Sélectionner aléatoirement 10 phrases parmi toutes les phrases extraites\u001b[39;00m\n",
+      "File \u001b[1;32mc:\\Users\\duboi\\MA2TAC\\tac\\tac_venv\\Lib\\site-packages\\spacy\\language.py:999\u001b[0m, in \u001b[0;36mLanguage.__call__\u001b[1;34m(self, text, disable, component_cfg)\u001b[0m\n\u001b[0;32m    978\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__call__\u001b[39m(\n\u001b[0;32m    979\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[0;32m    980\u001b[0m     text: Union[\u001b[38;5;28mstr\u001b[39m, Doc],\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    983\u001b[0m     component_cfg: Optional[Dict[\u001b[38;5;28mstr\u001b[39m, Dict[\u001b[38;5;28mstr\u001b[39m, Any]]] \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[0;32m    984\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Doc:\n\u001b[0;32m    985\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Apply the pipeline to some text. The text can span multiple sentences,\u001b[39;00m\n\u001b[0;32m    986\u001b[0m \u001b[38;5;124;03m    and can contain arbitrary whitespace. Alignment into the original string\u001b[39;00m\n\u001b[0;32m    987\u001b[0m \u001b[38;5;124;03m    is preserved.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    997\u001b[0m \u001b[38;5;124;03m    DOCS: https://spacy.io/api/language#call\u001b[39;00m\n\u001b[0;32m    998\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 999\u001b[0m     doc \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_ensure_doc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1000\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m component_cfg \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   1001\u001b[0m         component_cfg \u001b[38;5;241m=\u001b[39m {}\n",
+      "File \u001b[1;32mc:\\Users\\duboi\\MA2TAC\\tac\\tac_venv\\Lib\\site-packages\\spacy\\language.py:1090\u001b[0m, in \u001b[0;36mLanguage._ensure_doc\u001b[1;34m(self, doc_like)\u001b[0m\n\u001b[0;32m   1088\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m doc_like\n\u001b[0;32m   1089\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(doc_like, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m-> 1090\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmake_doc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdoc_like\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   1091\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(doc_like, \u001b[38;5;28mbytes\u001b[39m):\n\u001b[0;32m   1092\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m Doc(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mvocab)\u001b[38;5;241m.\u001b[39mfrom_bytes(doc_like)\n",
+      "File \u001b[1;32mc:\\Users\\duboi\\MA2TAC\\tac\\tac_venv\\Lib\\site-packages\\spacy\\language.py:1079\u001b[0m, in \u001b[0;36mLanguage.make_doc\u001b[1;34m(self, text)\u001b[0m\n\u001b[0;32m   1073\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Turn a text into a Doc object.\u001b[39;00m\n\u001b[0;32m   1074\u001b[0m \n\u001b[0;32m   1075\u001b[0m \u001b[38;5;124;03mtext (str): The text to process.\u001b[39;00m\n\u001b[0;32m   1076\u001b[0m \u001b[38;5;124;03mRETURNS (Doc): The processed doc.\u001b[39;00m\n\u001b[0;32m   1077\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m   1078\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(text) \u001b[38;5;241m>\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_length:\n\u001b[1;32m-> 1079\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   1080\u001b[0m         Errors\u001b[38;5;241m.\u001b[39mE088\u001b[38;5;241m.\u001b[39mformat(length\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlen\u001b[39m(text), max_length\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_length)\n\u001b[0;32m   1081\u001b[0m     )\n\u001b[0;32m   1082\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtokenizer(text)\n",
+      "\u001b[1;31mValueError\u001b[0m: [E088] Text of length 4684433 exceeds maximum of 1000000. The parser and NER models require roughly 1GB of temporary memory per 100,000 characters in the input. This means long texts may cause memory allocation errors. If you're not using the parser or NER, it's probably safe to increase the `nlp.max_length` limit. The limit is in number of characters, so you can check whether your inputs are too long by checking `len(text)`."
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import random\n",
+    "import spacy\n",
+    "\n",
+    "# Charger le modèle de langue français de spaCy pour segmenter le texte en phrases\n",
+    "nlp = spacy.load('fr_core_news_md')\n",
+    "\n",
+    "# Définir le chemin vers le dossier contenant les fichiers texte et l'année cible\n",
+    "txt_path = \"C:/Users/duboi/MA2TAC/tac/data/txt\"\n",
+    "year = \"1941\"\n",
+    "\n",
+    "# Filtrer les fichiers de l'année 1941\n",
+    "files = [f for f in os.listdir(txt_path) if f.endswith('.txt') and year in f]\n",
+    "\n",
+    "# Charger le contenu des fichiers de l'année 1941\n",
+    "text = \"\"\n",
+    "for f in files:\n",
+    "    with open(os.path.join(txt_path, f), 'r', encoding='utf-8') as file:\n",
+    "        text += file.read() + \" \"  # Ajouter un espace entre chaque fichier pour éviter de coller les textes\n",
+    "\n",
+    "# Traiter le texte avec spaCy pour diviser en phrases\n",
+    "doc = nlp(text)\n",
+    "sentences = [sent.text.strip() for sent in doc.sents]\n",
+    "\n",
+    "# Sélectionner aléatoirement 10 phrases parmi toutes les phrases extraites\n",
+    "sample_sentences = random.sample(sentences, min(10, len(sentences)))\n",
+    "\n",
+    "# Afficher les 10 phrases sélectionnées\n",
+    "print(\"10 phrases sélectionnées de l'année 1941 :\")\n",
+    "for i, sentence in enumerate(sample_sentences, 1):\n",
+    "    print(f\"{i}. {sentence}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 phrases sélectionnées de l'année 1941 :\n",
+      "1. , écr.\n",
+      "2. , del 2 4 4 b., 425 ir.\n",
+      "3. B.en que l'horaire n'ait pas été respecté, tout lut terminé â une heure aséei raisonnable.\n",
+      "4. Sobrutrn.\n",
+      "5. 30.01.\n",
+      "6. —\n",
+      "7. ECIURÉ\n",
+      "8. Inutile sans très cherche place.\n",
+      "9. 54 Waldori (Kerchove) .\n",
+      "10. De part eL d’autre\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import random\n",
+    "import spacy\n",
+    "\n",
+    "# Charger le modèle de langue français de spaCy pour segmenter le texte en phrases\n",
+    "nlp = spacy.load('fr_core_news_md')\n",
+    "nlp.max_length = 5000000  # Augmenter la limite si nécessaire\n",
+    "\n",
+    "# Définir le chemin vers le dossier contenant les fichiers texte et l'année cible\n",
+    "txt_path = \"C:/Users/duboi/MA2TAC/tac/data/txt\"\n",
+    "year = \"1941\"\n",
+    "\n",
+    "# Filtrer les fichiers de l'année 1941\n",
+    "files = [f for f in os.listdir(txt_path) if f.endswith('.txt') and year in f]\n",
+    "\n",
+    "# Charger le contenu des fichiers de l'année 1941\n",
+    "text = \"\"\n",
+    "for f in files:\n",
+    "    with open(os.path.join(txt_path, f), 'r', encoding='utf-8') as file:\n",
+    "        text += file.read() + \" \"\n",
+    "\n",
+    "# Diviser le texte en morceaux de 1 million de caractères\n",
+    "chunk_size = 1000000  # Taille maximale de chaque morceau\n",
+    "chunks = [text[i:i + chunk_size] for i in range(0, len(text), chunk_size)]\n",
+    "\n",
+    "# Extraire des phrases de chaque morceau\n",
+    "sentences = []\n",
+    "for chunk in chunks:\n",
+    "    doc = nlp(chunk)\n",
+    "    sentences.extend([sent.text.strip() for sent in doc.sents])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 phrases sélectionnées de l'année 1941 :\n",
+      "1. par étage, compt.\n",
+      "2. Transportée d’urgence dans un dispensaire voisin, on lui appliqua la respiration artificielle, mais elle ne put être rappelée à la vie.\n",
+      "3. Ag- Rossel\n",
+      "4. Tél.\n",
+      "5. Mura;\n",
+      "6. élecl.. rtiauft.\n",
+      "7. , Vornon Bartlett exprime également l'avis darts la pfesse anglaise\n",
+      "8. Cellettcl a une valeur de 1.5Q0 fr.\n",
+      "9. »\n",
+      "10. 8-50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Sélectionner aléatoirement 10 phrases parmi toutes les phrases extraites\n",
+    "sample_sentences = random.sample(sentences, min(10, len(sentences)))\n",
+    "\n",
+    "# Afficher les 10 phrases sélectionnées\n",
+    "print(\"10 phrases sélectionnées de l'année 1941 :\")\n",
+    "for i, sentence in enumerate(sample_sentences, 1):\n",
+    "    print(f\"{i}. {sentence}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Création fonction get_sentiment\n",
+    "tb = Blobber(pos_tagger=PatternTagger(), analyzer=PatternAnalyzer())\n",
+    "\n",
+    "def get_sentiment(input_text):\n",
+    "    blob = tb(input_text)\n",
+    "    polarity, subjectivity = blob.sentiment\n",
+    "    polarity_perc = f\"{100*abs(polarity):.0f}\"\n",
+    "    subjectivity_perc = f\"{100*subjectivity:.0f}\"\n",
+    "    if polarity > 0:\n",
+    "        polarity_str = f\"{polarity_perc}% positive\"\n",
+    "    elif polarity < 0:\n",
+    "        polarity_str = f\"{polarity_perc}% negative\"\n",
+    "    else:\n",
+    "        polarity_str = \"neutral\"\n",
+    "    if subjectivity > 0:\n",
+    "        subjectivity_str = f\"{subjectivity_perc}% subjective\"\n",
+    "    else:\n",
+    "        subjectivity_str = \"perfectly objective\"\n",
+    "    print(f\"This text is {polarity_str} and {subjectivity_str}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is neutral and perfectly objective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\"S’il existe des précédents, ils ont été créés.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 12% negative and 10% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\"Le Quartier général de l’Armée publie la liste des officiers et des soldats tombés sur le front de Grèce, entre le 1er et le 31 décembre.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 8% positive and 30% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\"CLes mêmes cercles, soulignent qu’il serait erroné de vouloir tabler indéfiniment sur la patience de l’Allemagne, qui, un jour, ne pourra plus supporter les excès auxquels on se livre contre elle et qui portent atteinte à son prestige.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 5% negative and 30% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\" Un malandrin a Jeté, pendant la nuit, un pavé dans la vitrine du magasin de M, Fernand Leclercq, négociant, demeurant rue do l’Athénée, A Mons, Une grande glace a été brisée\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 4% positive and 25% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\"En même temps, en Crète, les Anglais s’installent toujours davantage.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is neutral and 3% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\"Four ce faire, nous avons travaillé avec logique et en suivant une méthode employée dans d'autres ports.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 8% positive and 10% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\"Pas moyen de l'en chasser, puisque c'est la propriétaire de la maison.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is neutral and 10% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\"Et trois gendarmes poursuivent le colérique M. Volant dans les couloirs du Palais, où ils finissent par le rattraper.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 44% positive and 38% subjective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\"Belle et grande chambre à coucher en chêne clair, bols naturel (deux garde-robes et meubles combinés).\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This text is 2% negative and perfectly objective.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Analyse sentiments\n",
+    "get_sentiment(\"Transportée d’urgence dans un dispensaire voisin, on lui appliqua la respiration artificielle, mais elle ne put être rappelée à la vie.\")"
+   ]
   }
  ],
  "metadata": {
